--- a/pom.xml
+++ b/pom.xml
@@ -99,9 +99,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.Exceptionflug</groupId>
-            <artifactId>protocolize</artifactId>
-            <version>v2.4.0</version>
+            <groupId>dev.simplix</groupId>
+            <artifactId>protocolize-api</artifactId>
+            <version>2.3.2</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
