Add bStats metrics integration and complete teleportation optimizations

--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,17 @@
                         <configuration>
                             <minimizeJar>false</minimizeJar>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <relocations>
+                                <relocation>
+                                    <pattern>org.bstats</pattern>
+                                    <shadedPattern>com.melut.nomorebots.metrics</shadedPattern>
+                                </relocation>
+                            </relocations>
                             <artifactSet>
                                 <includes>
                                     <include>org.xerial:sqlite-jdbc</include>
                                     <include>org.slf4j:slf4j-api</include>
+                                    <include>org.bstats:bstats-velocity</include>
                                 </includes>
                             </artifactSet>
                             <filters>
@@ -116,10 +123,10 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>dev.simplix</groupId>
-            <artifactId>protocolize-api</artifactId>
-            <version>2.3.2</version>
-            <scope>provided</scope>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-velocity</artifactId>
+            <version>3.1.0</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
